--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  z-index:98;
 }
 
 .Topnavbar {
@@ -14,6 +15,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index:99;
 }
 
 .Navbar__header {
